--- a/bvh/packages.config
+++ b/bvh/packages.config
@@ -3,4 +3,7 @@
   <package id="MathNet.Numerics" version="4.7.0" targetFramework="net461" />
   <package id="MathNet.Spatial" version="0.4.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="Unity" version="5.10.3" targetFramework="net461" />
+  <package id="UnityEngine" version="1.0.0" targetFramework="net461" />
 </packages>
